docs: amend constitution to v1.2.0 (JEP README documentation requirement)
Expand Principle I to require that any newly introduced JEP is
documented in README.md with its JEP number, title, and the
module(s) demonstrating it.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>